--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                     <h1 class="head-text">Todo List <img class="img1" src="./list_15188078.png" alt="todo.img"></h1>
                     <div class="input">
                         <input type="text" id="input-bar" placeholder="Add Task">
-                        <button class="btn">Add</button>
+                        <button onclick="addTask()" class="btn">Add</button>
                     </div>
-                    <div>
+                    <div class="ul">
                         <ul>
                             <li>Task 1</li>
                             <li>Task 2</li>
