--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                     </div>
                     <div class="ul">
                         <ul>
-                            <li>Task 1</li>
-                            <li>Task 2</li>
-                            <li>Task 3</li>
-                            <li>Task 4</li>
+                            <li class="li">Task 1</li>
+                            <li class="li">Task 2</li>
+                            <li class="li">Task 3</li>
+                            <li class="li">Task 4</li>
                         </ul>
                     </div>
                 </div>
