--- a/index.html
+++ b/index.html
@@ -5,24 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo App</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <section class="main-container">
         <div class="content">
-            <div class="card">
-                <div class="card2">
+            <div class="uicard">
+                <div class="uicard2">
                     <h1 class="head-text">Todo List <img class="img1" src="./list_15188078.png" alt="todo.img"></h1>
-                    <div class="input">
+                    <div class="inputmain">
                         <input type="text" id="input-bar" placeholder="Add Task">
-                        <button onclick="addTask()" class="btn">Add</button>
+                        <button onclick="addTask()" class="addbtn">Add</button>
                     </div>
-                    <div class="ul">
-                        <ul>
-                            <li class="li">Task 1</li>
-                            <li class="li">Task 2</li>
-                            <li class="li">Task 3</li>
-                            <li class="li">Task 4</li>
-                        </ul>
+                    <div>
+                        <ol class="ol"></ol>
                     </div>
                 </div>
             </div>
@@ -37,6 +33,7 @@
 
 
     <script src="app.js"></script>
-    <!-- <script src="https://kit.fontawesome.com/6d4a023faa.js" crossorigin="anonymous"></script> -->
+    <script src="https://kit.fontawesome.com/6d4a023faa.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
