--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
+
+
+    <!-- Main Card -->
+
     <section class="main-container">
         <div class="content">
             <div class="uicard">
@@ -19,21 +23,27 @@
                     </div>
                     <div>
                         <ol class="ol"></ol>
-                    </div>
-                </div>
-            </div>
-        </div>
+                        </div>
+                        </div>
+                        </div>
+                        </div>
     </section>
+    
+    <!-- Main Card -->
+                        
 
 
-
-
-
-
-
-
+    <!-- JavaScript Link -->
     <script src="app.js"></script>
+    <!-- JavaScript Link -->
+
+    <!-- FontAwesome Link -->
     <script src="https://kit.fontawesome.com/6d4a023faa.js" crossorigin="anonymous"></script>
+    <!-- FontAwesome Link -->
+
+    <!-- Bootstrap Link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
+    <!-- Bootstrap Link -->
+
+    </body>
 </html>
