--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
         <div class="content">
             <div class="uicard">
                 <div class="uicard2">
-                    <h1 class="head-text">Todo List <img class="img1" src="./list_15188078.png" alt="todo.img"></h1>
+                    <h1 class="head-text">Todo List <img class="img1" src="./Assets/list_15188078.png" alt="todo.img"></h1>
                     <div class="inputmain">
                         <input type="text" id="input-bar" placeholder="Add Task">
                         <button onclick="addTask()" class="addbtn">Add</button>
                     </div>
                     <div>
                         <ol class="ol"></ol>
-                        </div>
-                        </div>
-                        </div>
-                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
-    
+
     <!-- Main Card -->
                         
 
